store-app/k8s/mysqldb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database

spec:
  replicas: 1
  selector:
    matchLabels:
      component: database
  template:
    metadata:
      labels:
        component: database
    spec:
      containers:
      - name: mysqldb
        image: mysql:latest
        ports:
          - containerPort: 3306
