store-app/k8s/notifications-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notifications-api
  template:
    metadata:
      labels:
        app: notifications-api
    spec:
      containers:
      - name: notifications-api
        image: rafaltaraska/notifications-api:latest
        ports:
          - containerPort: 5001
