store-app/k8s/frontend-cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-cluster-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: frontend
