store-app/k8s/mysql-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-db-service
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql-db
