store-app/k8s/mysqldb-cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysqldb-cluster-service
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql-db
