store-app/k8s/products-cluster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-cluster-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: products
