store-app/k8s/store-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: store-frontend-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: store-frontend
